Landpage especial Mundial Qatar 2022

--- a/index.html
+++ b/index.html
@@ -5,16 +5,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>SMMT</title>
+    <meta name="description" content="Prode Mundial SMMT!" />
+    <meta property="og:title" content="Prode Mundial SMMT" />
+    <meta property="og:url" content="http://ecngx303.inmotionhosting.com/~db457f5/prodemundial/" />
+    <meta property="og:description" content="Prode Mundial SMMT" />
+    <meta property="og:image" content="./images/logo-og.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_ES" />
+    <meta property="og:locale:alternate" content="en_US" />
+
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <title>Prode Mundial SMMT</title>
+    <link rel="icon" type="image/x-icon" href="./images/fat-logo-favicon.png">
 </head>
 
 <body>
     <div class="container">
-        <h1>:: SMMT ::</h1>
-        <h2>Llegó el momento</h2>
-        <div class="hero">
-            <a href="http://ecngx303.inmotionhosting.com/~db457f5/prodemundial/">Ir al mundial</a>
+        <header>
+            <logo>
+                <div class="logo-left">
+                    PRODE
+                </div>
+                <img src='./images/fat-logo.png' alt='logo'>
+                <div class="logo-right">
+                    MUNDIAL
+                </div>
+            </logo>
+            <div class='titulo'>· S M M T ·</div>
+        </header>
+        <div class="action">
+            <a href="http://ecngx303.inmotionhosting.com/~db457f5/prodemundial/">ACCEDER CON USUARIO Y CLAVE</a>
+        </div>
+        <div style="padding:1rem;display:flex;justify-content:center;flex-direction:column;">
+            <div class='center' style='font-size:0.9rem;margin:0 0 0.5rem 0;'>Powered by</div>
+            <div class='center'>
+                <img src="images/pasquin-software-factory-low.png" alt="" class='pasquin-logo'>
+            </div>
         </div>
     </div>
 </body>
